Temporarily deleted namespaces and folders

--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -18,6 +18,11 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RaceManagerDbConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\Database\Data\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="RaceManagerDbConnection"
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
+                           AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;
+                           Initial Catalog=RaceManagerDb;
+                           Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
