--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -19,10 +19,31 @@
   </entityFramework>
   <connectionStrings>
     <add name="RaceManagerDbConnection"
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;
-                           AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;
-                           Initial Catalog=RaceManagerDb;
-                           Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service name="Server.Service">
+        <endpoint address="" binding="basicHttpBinding" contract="Server.IService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/RaceManager/Api/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
