--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -17,10 +20,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
   <connectionStrings>
     <add name="RaceManagerDbConnection"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
@@ -32,7 +37,7 @@
     </behaviors>
     <services>
       <service name="Server.Service">
-        <endpoint address="" binding="basicHttpBinding" contract="Server.IService">
+        <endpoint address="" binding="basicHttpBinding" contract="SharedLibrary.IService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -46,4 +51,5 @@
       </service>
     </services>
   </system.serviceModel>
+
 </configuration>
