Created a shared library for the service

--- a/RaceManager/Client/App.config
+++ b/RaceManager/Client/App.config
@@ -1,6 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:25256/TestService"
+                binding="netTcpBinding"
+                contract="Service.ITestService"
+                name="TestService" />
+    </client>
+  </system.serviceModel>
+  
 </configuration>
