--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -25,29 +25,13 @@
     <add name="RaceManagerDbConnection"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
+
   <system.serviceModel>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
     <services>
-      <service name="Server.Service">
-        <endpoint address="" binding="basicHttpBinding" contract="SharedLibrary.IService">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8733/RaceManager/Api/" />
-          </baseAddresses>
-        </host>
+      <service name="Server.TestService">
+        <endpoint address="net.tcp://localhost:25256/TestService"
+                  binding="netTcpBinding"
+                  contract="Service.ITestService" />
       </service>
     </services>
   </system.serviceModel>
