--- a/RaceManager/Server/Server.csproj
+++ b/RaceManager/Server/Server.csproj
@@ -72,11 +72,11 @@
     <Compile Include="Domain\Driver.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
     <Compile Include="Domain\Race.cs" />
-    <Compile Include="Services\Service.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\Vehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -104,9 +104,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj">
-      <Project>{30D7CAEA-0712-4B86-B4B0-614B757BAA5C}</Project>
-      <Name>SharedLibrary</Name>
+    <ProjectReference Include="..\Service\Service.csproj">
+      <Project>{DBA1EDA6-B4CA-40D5-8FEE-C6FCAD055A39}</Project>
+      <Name>Service</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
