--- a/RaceManager/Service/Service.csproj
+++ b/RaceManager/Service/Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30D7CAEA-0712-4B86-B4B0-614B757BAA5C}</ProjectGuid>
+    <ProjectGuid>{DBA1EDA6-B4CA-40D5-8FEE-C6FCAD055A39}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharedLibrary</RootNamespace>
-    <AssemblyName>SharedLibrary</AssemblyName>
+    <RootNamespace>Service</RootNamespace>
+    <AssemblyName>Service</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,11 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\DriverDTO.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DTOs\RaceDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="DTOs\VehicleDTO.cs" />
+    <Compile Include="Services\ITestService.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
