Simple login service

--- a/RaceManager/Client/App.config
+++ b/RaceManager/Client/App.config
@@ -7,10 +7,10 @@
 
   <system.serviceModel>
     <client>
-      <endpoint address="net.tcp://localhost:25256/TestService"
+      <endpoint address="net.tcp://localhost:25256/LoginService"
                 binding="netTcpBinding"
-                contract="Service.ITestService"
-                name="TestService" />
+                contract="Service.ILoginService"
+                name="LoginService" />
     </client>
   </system.serviceModel>
   
