--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -23,15 +23,16 @@
   
   <connectionStrings>
     <add name="RaceManagerDbConnection"
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\RaceManagerDb.mdf;Integrated Security=True;" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.serviceModel>
     <services>
-      <service name="Server.TestService">
-        <endpoint address="net.tcp://localhost:25256/TestService"
+      <service name="Server.LoginService">
+        <endpoint address="net.tcp://localhost:25256/LoginService"
                   binding="netTcpBinding"
-                  contract="Service.ITestService" />
+                  contract="Service.ILoginService" />
       </service>
     </services>
   </system.serviceModel>
