--- a/RaceManager/Service/Service.csproj
+++ b/RaceManager/Service/Service.csproj
@@ -42,10 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\DriverDTO.cs" />
+    <Compile Include="DTOs\LoginDTO.cs" />
     <Compile Include="DTOs\RaceDTO.cs" />
     <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="DTOs\VehicleDTO.cs" />
-    <Compile Include="Services\ITestService.cs" />
+    <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
