--- a/RaceManager/Server/Server.csproj
+++ b/RaceManager/Server/Server.csproj
@@ -70,14 +70,17 @@
     <Compile Include="DB\Configuration.cs" />
     <Compile Include="DB\Context.cs" />
     <Compile Include="DB\Initializer.cs" />
-    <Compile Include="Domain\Driver.cs" />
-    <Compile Include="Domain\BaseEntity.cs" />
-    <Compile Include="Domain\Race.cs" />
-    <Compile Include="Domain\User.cs" />
-    <Compile Include="Domain\Vehicle.cs" />
+    <Compile Include="Managers\DriverManager.cs" />
+    <Compile Include="Managers\RaceManager.cs" />
+    <Compile Include="Managers\VehicleManager.cs" />
+    <Compile Include="Models\Driver.cs" />
+    <Compile Include="Models\BaseEntity.cs" />
+    <Compile Include="Models\Race.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Vehicle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Services\LoginService.cs" />
   </ItemGroup>
   <ItemGroup>
