--- a/RaceManager/Client/App.config
+++ b/RaceManager/Client/App.config
@@ -7,10 +7,26 @@
 
   <system.serviceModel>
     <client>
-      <endpoint address="net.tcp://localhost:25256/LoginService"
+      <endpoint address="net.tcp://localhost:8080/LoginService"
                 binding="netTcpBinding"
                 contract="Service.ILoginService"
                 name="LoginService" />
+      <endpoint address="net.tcp://localhost:8080/UserService"
+                binding="netTcpBinding"
+                contract="Service.IUserService"
+                name="UserService" />
+      <endpoint address="net.tcp://localhost:8080/RaceService"
+                binding="netTcpBinding"
+                contract="Service.IRaceService"
+                name="RaceService" />
+      <endpoint address="net.tcp://localhost:8080/DriverService"
+                binding="netTcpBinding"
+                contract="Service.IDriverService"
+                name="DriverService" />
+      <endpoint address="net.tcp://localhost:8080/VehicleService"
+                binding="netTcpBinding"
+                contract="Service.IVehicleService"
+                name="VehicleService" />
     </client>
   </system.serviceModel>
   
