--- a/RaceManager/Service/Service.csproj
+++ b/RaceManager/Service/Service.csproj
@@ -47,6 +47,11 @@
     <Compile Include="DTOs\VehicleDTO.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IDriverService.cs" />
+    <Compile Include="Services\ICRUDService.cs" />
+    <Compile Include="Services\IUserService.cs" />
+    <Compile Include="Services\IVehicleService.cs" />
+    <Compile Include="Services\IRaceService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
