--- a/RaceManager/Server/Server.csproj
+++ b/RaceManager/Server/Server.csproj
@@ -86,6 +86,7 @@
     <Compile Include="SecurityManagers\AuthenticatonManager.cs" />
     <Compile Include="SecurityManagers\AuthorizationManager.cs" />
     <Compile Include="SecurityManagers\TokenManager.cs" />
+    <Compile Include="Services\BaseCRUDService.cs" />
     <Compile Include="Services\VehicleService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\DriverService.cs" />
