Implemented a basic race mapper and a basic race service

--- a/RaceManager/Server/Server.csproj
+++ b/RaceManager/Server/Server.csproj
@@ -80,6 +80,8 @@
     <Compile Include="DBEntities\Race.cs" />
     <Compile Include="DBEntities\User.cs" />
     <Compile Include="DBEntities\Vehicle.cs" />
+    <Compile Include="Mappers\BaseMapper.cs" />
+    <Compile Include="Mappers\RaceMapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DBManagers\UserDBManager.cs" />
