--- a/RaceManager/Server/App.config
+++ b/RaceManager/Server/App.config
@@ -11,11 +11,7 @@
   </startup>
 
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
@@ -23,7 +19,7 @@
 
   <connectionStrings>
     <add name="RaceManagerDbConnection"
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\RaceManagerDb.mdf;Integrated Security=True;"
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\RaceManagerDb.mdf;Initial Catalog=RaceManagerDb;Integrated Security=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
