Imeplemnted a basic client and added service references

--- a/RaceManager/RaceManager.Client/App.config
+++ b/RaceManager/RaceManager.Client/App.config
@@ -3,4 +3,24 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IDriverService" />
+                <binding name="BasicHttpBinding_IRaceService" />
+                <binding name="BasicHttpBinding_IVehicleService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:51257/Service/Services/DriverService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDriverService"
+                contract="DriverService.IDriverService" name="BasicHttpBinding_IDriverService" />
+            <endpoint address="http://localhost:51257/Service/Services/RaceService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRaceService"
+                contract="RaceService.IRaceService" name="BasicHttpBinding_IRaceService" />
+            <endpoint address="http://localhost:51257/Service/Services/VehicleService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVehicleService"
+                contract="VehicleService.IVehicleService" name="BasicHttpBinding_IVehicleService" />
+        </client>
+    </system.serviceModel>
 </configuration>
