--- a/RaceManager/RaceManager.Client/RaceManager.Client.csproj
+++ b/RaceManager/RaceManager.Client/RaceManager.Client.csproj
@@ -240,8 +240,6 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
