--- a/RaceManager/RaceManager.Server/Web.config
+++ b/RaceManager/RaceManager.Server/Web.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -12,27 +11,30 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding>
+          <security mode="Message">
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceCredentials>
+            <userNameAuthentication userNamePasswordValidationMode="Custom" customUserNamePasswordValidatorType="RaceManager.Server.Service.Security.ServiceAuthenticator, RaceManager.Server" />
+          </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
-    <!--
-        To browse web app root directory during debugging, set the value below to true.
-        Set to false before deployment to avoid disclosing web app folder information.
-      -->
     <directoryBrowse enabled="true" />
   </system.webServer>
   <entityFramework>
