--- a/RaceManager/RaceManager.Server/Web.config
+++ b/RaceManager/RaceManager.Server/Web.config
@@ -11,23 +11,11 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.serviceModel>
-    <bindings>
-      <wsHttpBinding>
-        <binding>
-          <security mode="Message">
-            <message clientCredentialType="UserName" />
-          </security>
-        </binding>
-      </wsHttpBinding>
-    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceMetadata httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
-          <serviceCredentials>
-            <userNameAuthentication userNamePasswordValidationMode="Custom" customUserNamePasswordValidatorType="RaceManager.Server.Service.Security.ServiceAuthenticator, RaceManager.Server" />
-          </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
